--- a/templates/developer.html
+++ b/templates/developer.html
@@ -1,19 +1,17 @@
 {% extends 'template.html' %}
 {% block content %}
-    <div class="d-flex justify-content-center align-items-center" style=" margin-top: 80px;">
-      <div class="card text-bg-primary mb-3" style="max-width: 60rem;">
-        <div class="card-body">
-          <h5 class="card-title" style="font-size: 60px; text-align: center">The Developer</h5>
-          <p class="card-text" style="font-size: 40px">
+<div class="developer-box">
+    <div class="developer-card">
+        <legend>The Developer</legend>
+        <h3>
             Najem Aldeen Abu Hamdah is a Computer Engineer who graduated in 2025 from University West.<br>
             He is a hardworking and dedicated programmer with expertise in multiple languages, including Python, Java, and C/C++.<br>
             He also specializes in cybersecurity and full-stack development, with strong problem-solving skills.<br>
             To learn more about him, visit his
-            <a href="https://www.linkedin.com/in/najem-aldeen-abu-hamdah-56a194317" target="_blank" class="text-light">LinkedIn profile</a>.<br>
-            For direct contact, call: <strong>073-760 0483</strong>.
-          </p>
-        </div>
-      </div>
+            <a href="https://www.linkedin.com/in/najem-aldeen-abu-hamdah-56a194317" target="_blank" class="text-blue">LinkedIn profile</a>.<br>
+            For direct contact, call/text: <strong>073-760 0483</strong>.
+        </h3>
     </div>
+</div>
 {% endblock %}
 
