--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,34 @@
 {% extends 'template.html' %}
 {% block content %}
 
-        {{ form.hidden_tag() }}
-        <p>Don't have an account! <a href = "{{ url_for('register') }}">register</a></p>
-        <form class="login_form">
-            <legend>Login</legend>
+<div class="login-box">
+  <div class="login-card">
 
-            <div class = "form-group">
-                {{ form.email.label }}
-                {{ form.email() }}
-            </div>
+    <p class="helper">
+      Don’t have an account? <a href="{{ url_for('register') }}">Register</a>
+    </p>
 
-            <div class = "form-group">
-                {{ form.password.label }}
-                {{ form.password() }}
+    <form class="login_form" action="{{ url_for('login') }}" method="POST" novalidate>
+      {{ form.hidden_tag() }}
 
-            </div>
+      <legend>Login</legend>
 
-            <div class = "form-group">
-                {{ form.submit() }}
-            </div>
-        </form>
+      <div class="form-group">
+        {{ form.email.label }}
+        {{ form.email(class="form-control", placeholder="you@example.com", autofocus=true) }}
+      </div>
+
+      <div class="form-group">
+        {{ form.password.label }}
+        {{ form.password(class="form-control") }}
+      </div>
+
+      <div class="form-group">
+        {{ form.submit(class="btn btn-primary w-100", value="Log In") }}
+      </div>
+    </form>
+
+  </div>
+</div>
+
 {% endblock %}
