--- a/templates/template.html
+++ b/templates/template.html
@@ -14,8 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-    <video autoplay muted loop playsinline id="bg-video">
-        <source src="{{ url_for('static', filename='videos/background.mp4') }}" type="video/mp4">
+    <video autoplay muted loop playsinline id="bg-video" preload="auto">
+        <source src="{{ url_for('static', filename='videos/background.mp4', v='2') }}" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -23,48 +23,52 @@
         <a id="logo1" href="{{ url_for('index') }}">
             <img src="{{ url_for('static', filename='images/logo1.png') }}" alt="Logo" class="logo-img">
         </a>
+
         <ul class="nav justify-content-end bg-primary" data-bs-theme="dark" id="menu">
-
-            {% if request.endpoint == 'home' %}
+            {# Show Logout only when logged in #}
+            {% if session.get('id') %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">logout</a>
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
-            {% endif %}
-            {# Show "Main" only if NOT on index page #}
-            {% if request.endpoint != 'index' and request.endpoint != 'home' and request.endpoint != 'login' %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-            </li>
-            {% endif %}
-
-            {# Show "Login" only if NOT on login page #}
-            {% if request.endpoint != 'login' and request.endpoint != 'home'%}
-                {% if request.endpoint != 'index' %}
+                {% if request.endpoint != 'home' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Main</a>
+                        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                     </li>
                 {% endif %}
             {% endif %}
-            {# Show "Register" only if NOT on register page #}
-            {% if request.endpoint != 'register' and request.endpoint != 'home'%}
-                {% if request.endpoint != 'index' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-                </li>
+
+            {# Show Login/Register only when NOT logged in and not already on those pages #}
+            {% if not session.get('id') %}
+                {% if request.endpoint != 'login' %}
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                {% endif %}
+                {% if request.endpoint != 'register' %}
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                 {% endif %}
             {% endif %}
+
+            {# "Main" if not already on index #}
+            {% if request.endpoint != 'index' %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Main</a></li>
+            {% endif %}
+
+            {# Other always-visible items (avoid duplicating current page) #}
             {% if request.endpoint != 'developer' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('developer') }}">Developer</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('developer') }}">Developer</a></li>
             {% endif %}
             {% if request.endpoint != 'about' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
+            {% endif %}
+
+            {# Show Reserve ONLY if logged in, and hide it on its own page #}
+            {% if session.get('id') and request.endpoint != 'reserve' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('reserve') }}">Reserve</a>
+            </li>
             {% endif %}
         </ul>
     </header>
+
 
 
 
