updated some routes and added admin dashboard. also created the html but it's unfinished

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -3,14 +3,16 @@
 <div class="developer-box">
     <div class="developer-card">
         <legend>The Developer</legend>
-        <h3>
-            Najem Aldeen Abu Hamdah is a Computer Engineer who graduated in 2025 from University West.<br>
-            He is a hardworking and dedicated programmer with expertise in multiple languages, including Python, Java, and C/C++.<br>
-            He also specializes in cybersecurity and full-stack development, with strong problem-solving skills.<br>
-            To learn more about him, visit his
-            <a href="https://www.linkedin.com/in/najem-aldeen-abu-hamdah-56a194317" target="_blank" class="text-blue">LinkedIn profile</a>.<br>
-            For direct contact, call/text: <strong>073-760 0483</strong>.
-        </h3>
+            <h3>{{ translation[lang]["developer"] | safe }}</h3>
+            {% if lang == "english" %}
+                <a href="{{ url_for('developer', lang='swedish') }}">
+                    <button class="btn btn-primary w-100">Change to Swedish</button>
+                </a>
+            {% else %}
+                <a href="{{ url_for('developer', lang='english') }}">
+                    <button class="btn btn-primary w-100">Change to English</button>
+                </a>
+            {% endif %}
     </div>
 </div>
 {% endblock %}
