--- a/templates/template.html
+++ b/templates/template.html
@@ -30,6 +30,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
+                {% if session.get('admin') == True %}
+                    {% if request.endpoint != 'admin_db' %}
+                        <li>
+                            <a class="nav-link" href="{{ url_for('admin_db') }}">Dashboard</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
                 {% if request.endpoint != 'home' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('home') }}">Home</a>
